--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^5.4.1
   flutter_bloc: ^9.0.0
   firebase_core: ^3.10.1
+  cloud_firestore: ^5.6.3
 
 dev_dependencies:
   flutter_test:
