--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_bloc: ^9.0.0
   firebase_core: ^3.10.1
   cloud_firestore: ^5.6.3
+  provider: ^6.1.2
+  flutter_screenutil: ^5.9.3
+
 
 dev_dependencies:
   flutter_test:
