--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   firebase_storage: ^12.4.3
   image_picker: ^1.1.2
+  flutter_native_splash: ^2.4.5
 
 
 
@@ -74,6 +75,7 @@ flutter:
   assets:
    - assets/IMAGES/
    - assets/ICONS/
+
 
 
 
