--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   equatable: ^2.0.5
   cached_network_image: ^3.2.0
+  firebase_realtime_database_chat: ^0.0.1
+  firebase_messaging: ^15.2.3
+  firebase_database: ^11.3.4
+  intl: ^0.18.1
+
 
 
 
